# GameOfChess

./: CMakeLists.txt  main.cpp
src/: Board.cpp  Board.h  ChessBoardWidget.cpp  ChessBoardWidget.h  DifficultySelectorWidget.cpp  DifficultySelectorWidget.h  GameState.cpp  GameState.h  MainMenuWidget.cpp  MainMenuWidget.h  MenuWindow.cpp  MenuWindow.h  Move.cpp  Move.h  MoveGen.cpp  MoveGen.h  Piece.cpp  Piece.h
src/engine/: StockFishClient.cpp  StockFishClient.h
tests/: CMakeLists.txt  GameStateTest.cpp  MoveGenTest.cpp  MoveTest.cpp  PieceTest.cpp
